fix: featured category name alignment

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -300,7 +300,6 @@
           +fluid-type(16px, 18px)
           font-weight: bold
           line-height: 1.25em
-          text-align: left
           overflow-wrap: break-word
           position: relative
 
